Rename ISMSMessage to ISMSNotification and Adding Skeleton command and query for product

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,9 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "SMSMessagesConfigurations": {
-    "AccountSID": "AC5228426fb2842de3a346aeb5aab0c0cf",
-    "AuthToken": "70e25b64746d7954a4dc68ce55ea19cb",
-    "FromPhoneNumber":  "+201148125714"
+  "TwilioSMSConfigurations": {
+    "AccountSID": "AC845b05cc78ed04fc02eede1cb903ea3d",
+    "AuthToken": "7cb23c6b8b4f2ea62cb3e31c071f5931",
+    "FromPhoneNumber": "+17243906796"
   }
 }
