--- a/Security/src/Brimo.IDP.STS.Identity/Brimo.IDP.STS.Identity.csproj
+++ b/Security/src/Brimo.IDP.STS.Identity/Brimo.IDP.STS.Identity.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -13,6 +13,7 @@
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="3.0.0" />
         <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="3.0.0" />
         <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.0.3" />
+        <PackageReference Include="IdentityModel" Version="4.2.0" />
         <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="3.0.1" />
         <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="3.0.0" />
 
@@ -29,6 +30,7 @@
         <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="3.0.0" />
         <PackageReference Include="IdentityServer4.AspNetIdentity" Version="3.1.0" />
         <PackageReference Include="IdentityServer4.EntityFramework" Version="3.1.0" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
         <PackageReference Include="NWebsec.AspNetCore.Middleware" Version="2.0.0" />
         <PackageReference Include="Sendgrid" Version="9.12.0" />
         <PackageReference Include="Serilog" Version="2.9.0" />
@@ -43,6 +45,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Application\Application.csproj" />
         <ProjectReference Include="..\Brimo.IDP.Admin.EntityFramework.Shared\Brimo.IDP.Admin.EntityFramework.Shared.csproj" />
         <ProjectReference Include="..\Brimo.IDP.Admin.EntityFramework.SqlServer\Brimo.IDP.Admin.EntityFramework.SqlServer.csproj" />
     </ItemGroup>
