Finsh Archtichtrue setup Adding Create command for product,brand and product category Adding Algoila

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=.;Database=BrimoDB;Trusted_Connection=True;",
   "ConnectionStrings": {
     "BrimoDatabase": "Server=.;Database=BrimoDB;Trusted_Connection=True;"
   },
@@ -8,6 +9,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AlgoliaSearchEngineConfigurations": {
+    "ApplicationId": "MI6XJRWQUM",
+    "APIKey": "da50e03550e5ffd28553100395540ecb"
   },
   "TwilioSMSConfigurations": {
     "AccountSID": "AC845b05cc78ed04fc02eede1cb903ea3d",
