--- a/API/API.csproj
+++ b/API/API.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
@@ -26,7 +27,6 @@
   <ItemGroup>
     <Folder Include="Controllers\Campaign\" />
     <Folder Include="Controllers\ShoppingVan\" />
-    <Folder Include="Controllers\ProductCatalog\" />
     <Folder Include="Controllers\Order\" />
   </ItemGroup>
 
