--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,10 +1,18 @@
 {
+  "ConnectionString": "Server=.;Database=BrimoDB;Trusted_Connection=True;",
+  "ConnectionStrings": {
+    "BrimoDatabase": "Server=.;Database=BrimoDB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AlgoliaSearchEngineConfigurations": {
+    "ApplicationId": "MI6XJRWQUM",
+    "APIKey": "da50e03550e5ffd28553100395540ecb"
   },
   "AllowedHosts": "*",
   "TwilioSMSConfigurations": {
