Adding List Brand Query

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -27,13 +27,10 @@
     <Folder Include="CustomerManagment\Customer\Queries\" />
     <Folder Include="ProductCatalog\BrandAggregate\Commands\DeleteBrand\" />
     <Folder Include="ProductCatalog\BrandAggregate\Commands\UpdateBrand\" />
-    <Folder Include="ProductCatalog\BrandAggregate\Queries\" />
+    <Folder Include="ProductCatalog\ProductAggregate\Queries\ListProducts\" />
     <Folder Include="ProductCatalog\ProductCategoryAggregate\Queries\" />
-    <Folder Include="ProductCatalog\ProductUnit\" />
-    <Folder Include="ProductCatalog\ProductAggregate\Queries\" />
     <Folder Include="ShoppingVan\" />
     <Folder Include="Order\" />
-    <Folder Include="SharedKernel\" />
   </ItemGroup>
 
 </Project>
