--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -25,11 +25,11 @@
     <Folder Include="Campaign\" />
     <Folder Include="CustomerManagment\Customer\ViewModels\" />
     <Folder Include="CustomerManagment\Customer\Queries\" />
+    <Folder Include="Order\" />
     <Folder Include="ProductCatalog\BrandAggregate\Commands\DeleteBrand\" />
     <Folder Include="ProductCatalog\BrandAggregate\Commands\UpdateBrand\" />
     <Folder Include="ProductCatalog\ProductAggregate\Queries\ListProducts\" />
-    <Folder Include="ShoppingVan\" />
-    <Folder Include="Order\" />
+    <Folder Include="ShoppingVan\ShoppingVanAggregate\" />
   </ItemGroup>
 
 </Project>
