Adding new project WebUI and convert it from css to scss Fix some configration in the identity server

--- a/Security/src/Brimo.IDP.Admin.Api/appsettings.json
+++ b/Security/src/Brimo.IDP.Admin.Api/appsettings.json
@@ -1,16 +1,21 @@
 {
-    "ConnectionStrings": {
-        "ConfigurationDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "PersistedGrantDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "IdentityDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "AdminLogDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "AdminAuditLogDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+    //"ConfigurationDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"PersistedGrantDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"IdentityDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"AdminLogDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"AdminAuditLogDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ConfigurationDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "PersistedGrantDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AdminLogDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AdminAuditLogDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
     "AdminApiConfiguration": {
         "ApiName": "Brimo.IDP Api",
         "ApiVersion": "v1",
-        "ApiBaseUrl": "http://localhost:5001",
-        "IdentityServerBaseUrl": "http://localhost:5000",
+        "ApiBaseUrl": "http://brimo-dev-identity-adminapi.azurewebsites.net",
+        "IdentityServerBaseUrl": "http://brimo-dev-identity-sts.azurewebsites.net",
         "OidcSwaggerUIClientId": "BrimoClientId_api_swaggerui",
         "OidcApiName": "BrimoClientId_api",
         "AdministrationRole": "Admin",
