--- a/Security/src/Brimo.IDP.Admin/appsettings.json
+++ b/Security/src/Brimo.IDP.Admin/appsettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "ConnectionStrings": {
-    "ConfigurationDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "PersistedGrantDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AdminLogDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AdminAuditLogDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConfigurationDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "PersistedGrantDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AdminLogDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AdminAuditLogDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "DatabaseProviderConfiguration": {
     "ProviderType": "SqlServer"
@@ -12,8 +12,8 @@
   "AdminConfiguration": {
     "PageTitle": "Brimo.IDP",
     "FaviconUri": "/favicon.ico",
-    "IdentityAdminRedirectUri": "http://localhost:9000/signin-oidc",
-    "IdentityServerBaseUrl": "http://localhost:5000",
+    "IdentityAdminRedirectUri": "http://brimo-dev-identity-admin.azurewebsites.net/signin-oidc",
+    "IdentityServerBaseUrl": "http://brimo-dev-identity-sts.azurewebsites.net",
     "IdentityAdminCookieName": "IdentityServerAdmin",
     "IdentityAdminCookieExpiresUtcHours": 12,
     "RequireHttpsMetadata": false,
