--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.json
@@ -1,9 +1,12 @@
 ﻿{
-    "ConnectionStrings": {
-        "ConfigurationDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "PersistedGrantDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "IdentityDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+    //"ConfigurationDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"PersistedGrantDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"IdentityDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConfigurationDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "PersistedGrantDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
     "DatabaseProviderConfiguration": {
         "ProviderType": "SqlServer"
     },
@@ -53,7 +56,7 @@
         "PageTitle": "Skoruba IdentityServer4",
         "HomePageLogoUri": "/images/skoruba-icon.png",
         "FaviconUri": "/favicon.ico",
-        "IdentityAdminBaseUrl": "http://localhost:9000",
+        "IdentityAdminBaseUrl": "http://brimo-dev-identity-admin.azurewebsites.net",
         "AdministrationRole": "Admin"
     },
     "CultureConfiguration": {
