Enable corse and add website layout

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionString": "Server=.;Database=BrimoDB;Trusted_Connection=True;",
   "ConnectionStrings": {
-    "BrimoDatabase": "Server=.;Database=BrimoDB;Trusted_Connection=True;"
+    "BrimoDatabase": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-brimodb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
   },
   "Logging": {
     "LogLevel": {
