Adding login and auth gurd

--- a/WebUI/appsettings.Development.json
+++ b/WebUI/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "IdentityServerAddress": "http://localhost:5000",
+  "ApiAddress": "http://localhost:5001/api/"
 }
