--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -1,10 +1,12 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "IdentityServerAddress": "http://localhost:5000",
+  "ApiAddress": "http://localhost:5001/api/"
 }
