--- a/Security/src/Brimo.IDP.STS.Identity/Brimo.IDP.STS.Identity.csproj
+++ b/Security/src/Brimo.IDP.STS.Identity/Brimo.IDP.STS.Identity.csproj
@@ -42,6 +42,7 @@
         <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
         <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.1.3" />
         <PackageReference Include="Skoruba.AuditLogging.EntityFramework" Version="1.0.0-beta7" />
+        <PackageReference Include="Twilio" Version="5.42.0" />
 
     </ItemGroup>
 
