--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Campaign\" />
+    <Folder Include="DistributorManagment\Commands\" />
     <Folder Include="ProductCatalog\BrandAggregate\Commands\DeleteBrand\" />
     <Folder Include="ProductCatalog\BrandAggregate\Commands\UpdateBrand\" />
   </ItemGroup>
