Adding distributer invitation URL

--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
@@ -65,6 +65,15 @@
     "AuthToken": "7cb23c6b8b4f2ea62cb3e31c071f5931",
     "FromPhoneNumber": "+17243906796"
   },
-  "BrimoAPIURL": "http://localhost:2020"
+  "BrimoAPIURL": "http://localhost:2020",
+  "BrimoWebURL": "http://localhost:4200",
+  "EmailSettings": {
+    "MailServer": "smtp.gmail.com",
+    "MailPort": 587,
+    "SenderName": "brimocompany@gmail.com",
+    "Sender": "brimocompany@gmail.com",
+    "Password": "12BrimoOneTwo",
+    "IsEnableSSL": true
+  }
 
 }
