--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.json
@@ -68,5 +68,14 @@
     "AuthToken": "7cb23c6b8b4f2ea62cb3e31c071f5931",
     "FromPhoneNumber": "+17243906796"
   },
-  "BrimoAPIURL": "https://brimo-dev-identity-brimoapi.azurewebsites.net"
+  "BrimoAPIURL": "https://brimo-dev-identity-brimoapi.azurewebsites.net",
+  "BrimoWebURL": "http://brimo-dev-identity-brimowebui.azurewebsites.net",
+  "EmailSettings": {
+    "MailServer": "smtp.gmail.com",
+    "MailPort": 587,
+    "SenderName": "brimocompany@gmail.com",
+    "Sender": "brimocompany@gmail.com",
+    "Password": "12BriomOneTwo",
+    "IsEnableSSL": true
+  }
 }
