--- a/WebUI/ClientApp/package.json
+++ b/WebUI/ClientApp/package.json
@@ -17,14 +17,16 @@
     "@angular/compiler": "8.2.12",
     "@angular/core": "8.2.12",
     "@angular/forms": "8.2.12",
+    "@angular/localize": "^9.1.10",
     "@angular/platform-browser": "8.2.12",
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
+    "@auth0/angular-jwt": "^3.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "angular-oauth2-oidc": "^9.2.2",
     "angular-oauth2-oidc-jwks": "^9.0.0",
-    "@auth0/angular-jwt": "^3.0.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
