--- a/WebUI/ClientApp/package.json
+++ b/WebUI/ClientApp/package.json
@@ -13,11 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.2.12",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "8.2.12",
     "@angular/compiler": "8.2.12",
     "@angular/core": "8.2.12",
     "@angular/forms": "8.2.12",
     "@angular/localize": "^9.1.10",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "8.2.12",
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
@@ -28,10 +30,11 @@
     "angular-oauth2-oidc": "^9.2.2",
     "angular-oauth2-oidc-jwks": "^9.0.0",
     "aspnet-prerendering": "^3.0.1",
-    "ngx-infinite-scroll": "^8.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
+    "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "ngx-infinite-scroll": "^8.0.0",
     "ngx-toastr": "^10.0.4",
     "ngx-ui-loader": "^9.1.1",
     "oidc-client": "^1.9.1",
