--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
@@ -74,6 +74,8 @@
     "Sender": "brimocompany@gmail.com",
     "Password": "12BrimoOneTwo",
     "IsEnableSSL": true
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "c2b6994d-e3be-4839-981c-43a0e39d18ca"
   }
-
 }
