--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -23,5 +23,13 @@
     "AccountSID": "AC845b05cc78ed04fc02eede1cb903ea3d",
     "AuthToken": "7cb23c6b8b4f2ea62cb3e31c071f5931",
     "FromPhoneNumber": "+17243906796"
+  },
+  "AzureLogging": {
+    "FileName": "azure-diagnostics-",
+    "FileSizeLimit": 50024,
+    "RetainedFileCountLimit": 5
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "5b6ba297-6333-46e9-be30-55e06b8372fc"
   }
 }
