--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -6,12 +6,10 @@
 
   <ItemGroup>
     <Folder Include="Campaign\" />
-    <Folder Include="CustomerManagment\Exceptions\" />
-    <Folder Include="DistributorManagment\Exceptions\" />
-    <Folder Include="ShoppingVan\Exceptions\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="8.6.1" />
     <PackageReference Include="MediatR" Version="8.0.0" />
   </ItemGroup>
 
