--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.json
@@ -77,5 +77,8 @@
     "Sender": "brimocompany@gmail.com",
     "Password": "12BriomOneTwo",
     "IsEnableSSL": true
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "c2b6994d-e3be-4839-981c-43a0e39d18ca"
   }
 }
