--- a/WebUI/ClientApp/package.json
+++ b/WebUI/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
     "@auth0/angular-jwt": "^3.0.0",
+    "@microsoft/applicationinsights-web": "^2.5.5",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "angular-oauth2-oidc": "^9.2.2",
