--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,11 @@ steps:
     command: 'build'
     projects: 'API/*.csproj'
 
+- task: VSBuild@1
+  inputs:
+    solution: '$(solution)'
+    msbuildArgs: '/t:**/API.csproj /p:DeployOnBuild=false /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
 - task: PublishBuildArtifacts@1
