--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ steps:
     publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True 
+    projects: 'API/*.csproj'
 
 - task: PublishBuildArtifacts@1
   displayName: 'publish artifacts'
