--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,22 +17,14 @@ variables:
 steps:
 - task: NuGetToolInstaller@1
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
-
 - task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-    projects: 'API/*.csproj'
-
-- task: DotNetCoreCLI@2
+  displayName: 'Publish API.csproj'
   inputs:
     command: publish
     publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True 
-    projects: 'API/*.csproj'
+    projects: '**/API.csproj'
 
 - task: PublishBuildArtifacts@1
   displayName: 'publish artifacts'
