--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,9 +25,10 @@ steps:
   displayName: 'Publish API.csproj'
   inputs:
     command: publish
-    projects: '**/API.csproj'
+    publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True 
+    projects: '**/API.csproj'
 
 - task: PublishBuildArtifacts@1
   displayName: 'publish artifacts'
