Adding order managment test

--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
@@ -2,7 +2,8 @@
   "ConnectionStrings": {
     "ConfigurationDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
     "PersistedGrantDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"IdentityDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDbConnection": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=brimo-dev-identitydb;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "DatabaseProviderConfiguration": {
     "ProviderType": "SqlServer"
