--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,10 @@ steps:
   displayName: 'Run All Test'
   inputs:
     command: 'test'
-
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: 'JaCoCo'
+    summaryFileLocation: 'test code coverage'
 - task: DotNetCoreCLI@2
   displayName: 'Publish All Projects'
   inputs:
