--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,10 +27,12 @@ steps:
   displayName: 'Run All Test'
   inputs:
     command: 'test'
+
 - task: PublishCodeCoverageResults@1
   inputs:
-    codeCoverageTool: 'JaCoCo'
-    summaryFileLocation: 'test code coverage'
+    codeCoverageTool: 'Cobertura'
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/drop/**/site/cobertura/coverage.xml'
+    
 - task: DotNetCoreCLI@2
   displayName: 'Publish All Projects'
   inputs:
