Adding automatic migration to test database

--- a/Application.IntegrationTests/Properties/launchSettings.json
+++ b/Application.IntegrationTests/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Application.IntegrationTests": {
       "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Prod"
       }
     }
   }
