--- a/Application.IntegrationTests/Application.IntegrationTests.csproj
+++ b/Application.IntegrationTests/Application.IntegrationTests.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DistributorManagment\" />
     <Folder Include="CustomerManagment\" />
+    <Folder Include="DistributorManagment\Queries\" />
   </ItemGroup>
 
 </Project>
