--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  env: 'Production'
 
 steps:
 - task: NuGetToolInstaller@1
@@ -23,15 +24,13 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- task: CmdLine@2
+  inputs:
+    script: 'SET ASPNETCORE_ENVIRONMENT=$(env)'
 - task: DotNetCoreCLI@2
   displayName: 'Run All Test'
   inputs:
     command: 'test'
-
-- task: PublishCodeCoverageResults@1
-  inputs:
-    codeCoverageTool: 'Cobertura'
-    summaryFileLocation: '$(System.DefaultWorkingDirectory)/drop/**/site/cobertura/coverage.xml'
     
 - task: DotNetCoreCLI@2
   displayName: 'Publish All Projects'
