--- a/API/appsettings.ahmed.json
+++ b/API/appsettings.ahmed.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "BrimoDatabase": "Server=(localdb)\\mssqllocaldb;Database=BrimoDB;User Id=test;Password=test;Trusted_Connection=True;"
-    //"BrimoDatabase": "Server=(localdb)\\mssqllocaldb;Database=BrimoDB;Trusted_Connection=True;",
-    //"BrimoDatabase": "Server=(localdb)\\mssqllocaldb;Database=BrimoTestingDB;User Id=testuser;Password=12OneTwo;Trusted_Connection=True;"
+    "BrimoDatabase": "Server=.;Database=BrimoDB;User Id=test;Password=test;Trusted_Connection=True;"
+    //"BrimoDatabase": "Server=.;Database=BrimoDB;Trusted_Connection=True;",
+    //"BrimoDatabase": "Server=.;Database=BrimoTestingDB;User Id=testuser;Password=12OneTwo;Trusted_Connection=True;"
     //"TestingDatabase": "Server=tcp:brimodevdbserver.database.windows.net,1433;Initial Catalog=BrimoTestingDB;Persist Security Info=False;User ID=brimodbuser;Password=iRWJkM223i;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AzureConfigurations": {
