--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,16 +23,12 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
-- task: VSTest@2
+
+
+- task: DotNetCoreCLI@2
   inputs:
-    testSelector: 'testAssemblies'
-    testAssemblyVer2: |
-      **\*Application.IntegrationTests*.dll
-      !**\*TestAdapter.dll
-      !**\obj\**
-    searchFolder: '$(System.DefaultWorkingDirectory)'
-    runSettingsFile: '$(System.DefaultWorkingDirectory)/DevOps.runsettings'
-    codeCoverageEnabled: true
+    command: 'test'
+    arguments: '--settings DevOps.runsettings'
 - task: DotNetCoreCLI@2
   displayName: 'Publish All Projects'
   inputs:
