Fix add item to van

--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "ConfigurationDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
     "PersistedGrantDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDbConnection": "Server=.;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "DatabaseProviderConfiguration": {
     "ProviderType": "SqlServer"
