--- a/Application.IntegrationTests/Application.IntegrationTests.csproj
+++ b/Application.IntegrationTests/Application.IntegrationTests.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="CustomerManagment\" />
+    <Folder Include="CustomerManagment\Queries\" />
     <Folder Include="DistributorManagment\Queries\" />
   </ItemGroup>
 
