--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "ahmed"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "API": {
