--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -27,5 +27,6 @@
     "FileName": "azure-diagnostics-",
     "FileSizeLimit": 50024,
     "RetainedFileCountLimit": 5
-  }
+  },
+  "BasePhotoUrl": "https://brimodevcdnendpoint.azureedge.net/images/"
 }
