--- a/WebUI/ClientApp/package.json
+++ b/WebUI/ClientApp/package.json
@@ -35,6 +35,7 @@
     "core-js": "^3.3.3",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "ngx-image-cropper": "^3.2.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-toastr": "^10.0.4",
     "ngx-ui-loader": "^9.1.1",
