--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Campaign\" />
+    <Folder Include="OffersManagment\DomainEventHandlers\" />
   </ItemGroup>
 
 </Project>
