--- a/WebUI/ClientApp/package.json
+++ b/WebUI/ClientApp/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.2.12",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "8.2.12",
     "@angular/compiler": "8.2.12",
     "@angular/core": "8.2.12",
@@ -33,6 +33,7 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
+    "cropperjs": "^1.5.7",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
     "ngx-image-cropper": "^3.2.0",
