Adding logout , upgrade twilio account and fix some bugs in order

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -20,9 +20,12 @@
   },
   "AllowedHosts": "*",
   "TwilioSMSConfigurations": {
-    "AccountSID": "AC845b05cc78ed04fc02eede1cb903ea3d",
-    "AuthToken": "7cb23c6b8b4f2ea62cb3e31c071f5931",
-    "FromPhoneNumber": "+17243906796"
+    //"AccountSID": "AC845b05cc78ed04fc02eede1cb903ea3d",
+    //"AuthToken": "7cb23c6b8b4f2ea62cb3e31c071f5931",
+    //"FromPhoneNumber": "+17243906796"
+    "AccountSID": "AC659db2e04055990c93682785441a3179",
+    "AuthToken": "94fb420453b6e0fd26a9373ebc80d2a3",
+    "FromPhoneNumber": "+14043480964"
   },
   "AzureLogging": {
     "FileName": "azure-diagnostics-",
