--- a/WebUI/ClientApp/package.json
+++ b/WebUI/ClientApp/package.json
@@ -42,6 +42,7 @@
     "ngx-ui-loader": "^9.1.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
+    "xlsx": "^0.15.4",
     "rxjs": "^6.5.3",
     "zone.js": "0.9.1"
   },
