--- a/WebUI/ClientApp/package.json
+++ b/WebUI/ClientApp/package.json
@@ -28,6 +28,7 @@
     "@microsoft/applicationinsights-web": "^2.5.5",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@types/jspdf": "^1.3.3",
     "angular-oauth2-oidc": "^9.2.2",
     "angular-oauth2-oidc-jwks": "^9.0.0",
     "aspnet-prerendering": "^3.0.1",
@@ -36,14 +37,15 @@
     "cropperjs": "^1.5.7",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "jspdf": "^2.1.1",
     "ngx-image-cropper": "^3.2.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-toastr": "^10.0.4",
     "ngx-ui-loader": "^9.1.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
-    "xlsx": "^0.15.4",
     "rxjs": "^6.5.3",
+    "xlsx": "^0.15.4",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
