Adding auth in edit profile and photos sizes

--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
@@ -68,6 +68,7 @@
     "AuthToken": "94fb420453b6e0fd26a9373ebc80d2a3",
     "FromPhoneNumber": "+14043480964"
   },
+  "IdentityServerAddress": "http://localhost:5000",
   "BrimoAPIURL": "http://localhost:2020",
   "BrimoWebURL": "http://localhost:4200",
   "EmailSettings": {
