--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.json
@@ -70,6 +70,7 @@
   },
   "BrimoAPIURL": "https://brimo-dev-identity-brimoapi.azurewebsites.net",
   "BrimoWebURL": "http://brimo-dev-identity-brimowebui.azurewebsites.net",
+  "IdentityServerAddress": "http://brimo-dev-identity-sts.azurewebsites.net",
   "EmailSettings": {
     "MailServer": "smtp.gmail.com",
     "MailPort": 587,
