Adding distributor id to products

--- a/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
+++ b/Security/src/Brimo.IDP.STS.Identity/appsettings.Development.json
@@ -76,7 +76,7 @@
     "MailPort": 587,
     "SenderName": "brimocompany@gmail.com",
     "Sender": "brimocompany@gmail.com",
-    "Password": "12BrimoOneTwo",
+    "Password": "12BriomOneTwo",
     "IsEnableSSL": true
   },
   "ApplicationInsights": {
