--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="FluentValidation" Version="8.6.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.6.1" />
     <PackageReference Include="Hangfire.Core" Version="1.7.9" />
@@ -17,6 +18,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,8 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Campaign\" />
     <Folder Include="OffersManagment\DomainEventHandlers\" />
+    <Folder Include="ReportsManagment\DomainEventHandlers\" />
+    <Folder Include="ReportsManagment\Commands\" />
+    <Folder Include="ReportsManagment\Queries\RetailerPerformanceReport\" />
   </ItemGroup>
 
 </Project>
