--- a/WebUI/ClientApp/package.json
+++ b/WebUI/ClientApp/package.json
@@ -28,16 +28,21 @@
     "@microsoft/applicationinsights-web": "^2.5.5",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@types/chart.js": "^2.9.25",
     "@types/jspdf": "^1.3.3",
     "angular-oauth2-oidc": "^9.2.2",
     "angular-oauth2-oidc-jwks": "^9.0.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "core-js": "^3.3.3",
     "cropperjs": "^1.5.7",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
     "jspdf": "^2.1.1",
+    "ng2-charts": "^2.4.2",
     "ngx-image-cropper": "^3.2.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-toastr": "^10.0.4",
